# NLP_2025W

./: .gitignore  EDA.ipynb  POC_task_7.ipynb  POC_tasks_2_3_5.ipynb  POC_tasks_6_8_11.ipynb  Poland_Statements_Analysing.ipynb  README.md  append_prompts.py  dataset_generating.ipynb  eda.ipynb  et --hard HEAD~1  evaluate.py  evaluate_prompts.py  judge_evaluation.ipynb  kaggle_notebook.ipynb  main.ipynb  main.py  manual_scoring.py  models.py  preprocessing.py  prompts_disinformation.json  prompts_health.json  prompts_misinformation.json  prompts_sample.json  pyproject.toml  r.tex  requirements.txt  run_experiment.py  tasks_1_7_9.ipynb  tasks_4_12_13_14.ipynb
Bazyluk_Kita_Topic_Discovery_for_News_Articles/: README.md
Charuza_Kuśmierz_Sroczyk/hallucinations/: README.md  analyze_data.py  dataset_evaluation.json  evaluate.py  pyproject.toml  test_wiki_insufficient.py  test_wiki_tricky.py  transform_wiki_data.py
Charuza_Kuśmierz_Sroczyk/hallucinations/data/: __init__.py  base.py
Charuza_Kuśmierz_Sroczyk/hallucinations/dummy_data/: neutral.jsonl  safety.jsonl
Charuza_Kuśmierz_Sroczyk/hallucinations/evaluation/: __init__.py  schemas.py
Charuza_Kuśmierz_Sroczyk/hallucinations/judges/: __init__.py  base.py  llm.py  schemas.py  simple.py
Charuza_Kuśmierz_Sroczyk/hallucinations/models/: __init__.py  base.py  factory.py  gemini.py  openai.py  qwen.py
Clickbait_Detection_Sawicki_Sokolowski_Wozniak/: POC.ipynb  README.md  measure.py  prepare_data.py  training_info.txt
Final/: .gitignore
Kisiel_Kosakowski_Franczak_Koniecko/: README.md  draw_validation_sample.py  evaluate.py  prompts_disinformation.json  prompts_health.json  (+3 more)
putin_speeches_bertopic/: pyproject.toml
putin_speeches_bertopic/putin_speeches/src/dashboard/: app.py  config.py  data_loader.py  services.py
putin_speeches_bertopic/putin_speeches/src/dashboard/callbacks/: document.py
putin_speeches_bertopic/putin_speeches/src/dashboard/components/: __init__.py  cards.py  figures.py  topic_section.py
putin_speeches_bertopic/putin_speeches/src/dashboard/layouts/: __init__.py  document.py  home.py
putin_speeches_bertopic/putin_speeches/src/dashboard/utils/: __init__.py
(+5227 files in other folders)
