[tool.poetry]
name = "international-agreements-mining"
description = "International agreements database data mining project"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.26.0"
tqdm = "^4.66.0"
scikit-learn = "^1.4.0"

sentence-transformers = "^2.3.0"
transformers = {extras = ["torch"], version = "^4.37.0"}
torch = "^2.2.0"
rapidfuzz = "^3.6.0"

llama-cpp-python = "^0.2.30"
huggingface-hub = "^0.20.0"

faiss-cpu = "^1.7.4"
umap-learn = "^0.5.5"
hdbscan = "^0.8.33"

python-dateutil = "^2.8.2"
dateparser = "^1.2.0"

matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"