[project]
name = "putin-speeches"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bertopic>=0.17.4",
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "nltk>=3.9.2",
    "polars>=1.37.1",
    "pyarrow>=22.0.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "torch<=2.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
